--- a/College/Localizable.strings
+++ b/College/Localizable.strings
@@ -22,8 +22,13 @@
 "SCHEDULE_SAVED_MESSAGE" = "Schedule has been successfully saved";
 "UPDATE_SCHEDULE" = "Update current schedule";
 "NEW_SCHEDULE" = "New schedule";
-"NO_SCHEDULE" = "No schedule saved here";
+"NO_SCHEDULE" = "No saved schedule here";
 "DELETE_RECORD_TITLE" = "Are you sure?";
 "DELETE_RECORD_MESSAGE" = "Are you sure you want to delete this record?";
 "ACTION_EDIT" = "Edit";
 "ACTION_DELETE" = "Delete";
+"UPDATE_SCHEDULE" = "Update current task";
+"NEW_SCHEDULE" = "New task";
+"NO_SCHEDULE" = "No saved tasks here";
+"TASK_SAVED" = "Saved";
+"TASK_SAVED_MESSAGE" = "Task has been successfully saved";
